appId: ${APP_ID}
---
- launchApp

- assertVisible:
    id: "screen-hub"

- tapOn:
    id: "hub-arena-button"

- assertVisible:
    id: "screen-arena"

- pressKey: back

- assertVisible:
    id: "screen-hub"